--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mediapipe/control_utils": "^0.6.1629159505",
     "@mediapipe/drawing_utils": "^0.3.1620248257",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "three": "^0.141.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
